--- a/action.html
+++ b/action.html
@@ -4,7 +4,10 @@
     <title>Action</title>
     <style>
         body {
-            background: #111;
+            background-image: url(https://media1.tenor.com/m/QZ-cVGVewUMAAAAC/running-away-ethan-hunt.gif);
+            background-repeat: no-repeat;
+            background-size: cover;
+    
             color: white;
             font-family: Arial;
             margin: 0;
@@ -14,15 +17,17 @@
             align-items: center;
         }
 
-        .movie-container {
+          .movie-container {
             display: flex;
             gap: 20px;
             margin-top: 50px;
         }
 
         .movie {
-            width: 130px;
-            height: 180px;
+             overflow: hidden;
+    z-index: 2;
+            width: 250px;
+            height: 350px;
             background: white;
             color: black;
             border-radius: 10px;
@@ -39,7 +44,6 @@
             transform: scale(1.08);
         }
 
-      
         .description {
             position: fixed;
             bottom: 40px;
@@ -60,11 +64,11 @@
     <h1>Select a Movie!</h1>
 
     <div class="movie-container">
-        <div class="movie" data-desc="Description of Movie 1">Movie 1</div>
-        <div class="movie" data-desc="Description of Movie 2">Movie 2</div>
-        <div class="movie" data-desc="Description of Movie 3">Movie 3</div>
-        <div class="movie" data-desc="Description of Movie 4">Movie 4</div>
-        <div class="movie" data-desc="Description of Movie 5">Movie 5</div>
+        <div class="movie" data-desc="Description of Movie 1"><img src="https://image.tmdb.org/t/p/original/r6q9wZK5a2K51KFj4LWVID6Ja1r.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 2"><img src="https://image.tmdb.org/t/p/original/l5uxY5m5OInWpcExIpKG6AR3rgL.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 3"><img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2019/12/EL1TuJCWsAENhm6.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 4"><img src="https://m.media-amazon.com/images/M/MV5BN2NmN2VhMTQtMDNiOS00NDlhLTliMjgtODE2ZTY0ODQyNDRhXkEyXkFqcGc@._V1_.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 5"><img src="https://m.media-amazon.com/images/M/MV5BMTU2NjA1ODgzMF5BMl5BanBnXkFtZTgwMTM2MTI4MjE@._V1_.jpg" height="350" width="250"></div>
     </div>
 
     <div class="description" id="descriptionBox"></div>
