--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <script>
+document.addEventListener("click", () => {
+    document.getElementById("curtainLeft").classList.add("open");
+    document.getElementById("curtainRight").classList.add("open");
+}, { once: true });     
+</script>
+
 <head>
     <title>Cinema</title>
     <style>
@@ -15,23 +22,28 @@
             font-family: Arial, sans-serif;
             overflow: hidden;
         }
+        
 
-        .curtain {
-            position: fixed;
-            top: 0;
-            width: 50%;
-            height: 100vh;
-            background: linear-gradient(#700, #400);
-            z-index: 10;
-            animation: openCurtains 2s forwards ease-in-out;
-        }
-        #curtainLeft { left: 0; }
-        #curtainRight { right: 0; }
+    .curtain {
+    position: fixed;
+    top: 0;
+    width: 50%;
+    height: 100vh;
+    background: linear-gradient(#700, #400);
+    z-index: 10;
+}
 
-        @keyframes openCurtains {
-            0% { width: 50%; }
-            100% { width: 0%; }
-        }
+#curtainLeft { left: 0; }
+#curtainRight { right: 0; }
+
+.curtain.open {
+    animation: openCurtains 2s forwards ease-in-out;
+}
+
+@keyframes openCurtains {
+    0% { width: 50%; }
+    100% { width: 0%; }
+}
 
         .screen {
             position: relative;
@@ -154,7 +166,7 @@
     <div class="screen">
         <div class="projector-beam"></div>
 
-        <div id="slideContent" class="slide">Slide 1</div>
+        <div id="slideContent" class="slide">Action</div>
 
         <div id="leftArrow" class="arrow">&lt;</div>
         <div id="rightArrow" class="arrow">&gt;</div>
@@ -164,27 +176,35 @@
 
 
     <script>
-        let slide = 1;
-        const totalSlides = 4;
-        const slideBox = document.getElementById("slideContent");
 
-        function changeSlide(direction) {
-            let old = slideBox.cloneNode(true);
-            old.classList.add(direction === "left" ? "slide-out-left" : "slide-out-right");
-            slideBox.parentElement.appendChild(old);
+let slide = 1;
+const slides = ["Action", "Horror", "Romance", "Comedy"]; 
+const totalSlides = slides.length;
 
-            slide += direction === "left" ? -1 : 1;
-            if (slide < 1) slide = totalSlides;
-            if (slide > totalSlides) slide = 1;
+const slideBox = document.getElementById("slideContent");
 
-            slideBox.textContent = "Slide " + slide; 
-            slideBox.classList.add(direction === "left" ? "slide-in-right" : "slide-in-left");
+function changeSlide(direction) {
+    let old = slideBox.cloneNode(true);
+    old.classList.add(direction === "left" ? "slide-out-left" : "slide-out-right");
+    slideBox.parentElement.appendChild(old);
 
-            setTimeout(() => { old.remove(); slideBox.classList.remove("slide-in-right", "slide-in-left"); }, 600);
-        }
+    slide += direction === "left" ? -1 : 1;
+    if (slide < 1) slide = totalSlides;
+    if (slide > totalSlides) slide = 1;
 
-        document.getElementById("leftArrow").onclick = () => changeSlide("left");
-        document.getElementById("rightArrow").onclick = () => changeSlide("right");
+    slideBox.textContent = slides[slide - 1];
+
+    slideBox.classList.add(direction === "left" ? "slide-in-right" : "slide-in-left");
+
+    setTimeout(() => { 
+        old.remove(); 
+        slideBox.classList.remove("slide-in-right", "slide-in-left"); 
+    }, 600);
+}
+
+document.getElementById("leftArrow").onclick = () => changeSlide("left");
+document.getElementById("rightArrow").onclick = () => changeSlide("right");
+
 
         function goNext() {
             if (slide === 1) window.location.href = "action.html";
