--- a/romance.html
+++ b/romance.html
@@ -4,7 +4,9 @@
     <title>Romance</title>
     <style>
         body {
-            background: #111;
+            background-image: url(https://media1.tenor.com/m/j_00kT9g5UkAAAAd/happy-couple-at-the-beach-allie.gif);
+            background-repeat: no-repeat;
+            background-size: cover;
             color: white;
             font-family: Arial;
             margin: 0;
@@ -14,15 +16,17 @@
             align-items: center;
         }
 
-        .movie-container {
+         .movie-container {
             display: flex;
             gap: 20px;
             margin-top: 50px;
         }
 
         .movie {
-            width: 130px;
-            height: 180px;
+             overflow: hidden;
+    z-index: 2;
+            width: 250px;
+            height: 350px;
             background: white;
             color: black;
             border-radius: 10px;
@@ -59,11 +63,11 @@
     <h1>Select a Movie!</h1>
 
     <div class="movie-container">
-        <div class="movie" data-desc="Description of Movie 1">Movie 1</div>
-        <div class="movie" data-desc="Description of Movie 2">Movie 2</div>
-        <div class="movie" data-desc="Description of Movie 3">Movie 3</div>
-        <div class="movie" data-desc="Description of Movie 4">Movie 4</div>
-        <div class="movie" data-desc="Description of Movie 5">Movie 5</div>
+        <div class="movie" data-desc="Description of Movie 1"><img src="https://image.tmdb.org/t/p/original/wbvboxr6xmdSbMEBKzXVWgAwJ1Q.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 2"><img src="https://image.tmdb.org/t/p/original/mKrdarFQ6H4E9HR02YiubLABXSZ.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 3"><img src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p22802_p_v10_ak.jpg" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 4"><img src="https://a.ltrbxd.com/resized/film-poster/5/1/5/7/7/51577-d-e-b-s--0-1000-0-1500-crop.jpg?v=f3585ff569" height="350" width="250"></div>
+        <div class="movie" data-desc="Description of Movie 5"><img src="https://image.tmdb.org/t/p/original/phB6HufNU537jBOoYIDWRHWG6SQ.jpg" height="350" width="250"></div>
     </div>
 
     <div class="description" id="descriptionBox"></div>
