--- a/horror.html
+++ b/horror.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Imperial+Script&family=Rubik+Glitch&family=Splash&display=swap" rel="stylesheet">
+
     <title>Horror</title>
     <style>
         html, body {
   margin: 0;
   padding: 0;
+}
+h1{
+  font-family: 'splash', cursive;
+   color: #930000;
+   text-shadow: #000 2px 2px 4px;
+   
 }
 body {
   background: #000;
@@ -172,7 +182,8 @@ body {
         body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    min-height: 100vh;  
     align-items: center;
     margin: 0;
 
@@ -212,25 +223,81 @@ body {
             transform: scale(1.08);
         }
 
-        .description {
+             .description {
             position: fixed;
             bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
             width: 400px;
-            background: white;
-            color: black;
+            background: rgba(30, 27, 27, 0.9);
+            color: rgb(228, 228, 228);
             padding: 15px;
-            border-radius: 20px;
+            border-radius: 10px;
             font-size: 14px;
-            text-align: center;
+            text-align: left;
             display: none;
-            box-shadow: 0 0 10px rgba(255,255,255,0.4);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            z-index: 15;
         }
-        
+
+        .description h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+
+        .description p {
+            margin: 5px 0;
+        }
+
+        .description strong {
+            font-weight: bold;
+        }
+         #menuBtn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    font-size: 32px;
+    cursor: pointer;
+    z-index: 20;
+    user-select: none;
+}
+
+#sidebar {
+    position: fixed;
+    top: 0;
+    right: -250px; 
+    width: 250px;
+    height: 100vh;
+    background: #850404;
+    display: flex;
+    flex-direction: column;
+    padding-top: 80px;
+    transition: right 0.3s ease;
+    z-index: 10;
+}
+
+#sidebar a {
+    color: white;
+    text-decoration: none;
+    padding: 15px 25px;
+    font-size: 20px;
+    transition: background 0.2s;
+}
+
+#sidebar a:hover {
+    text-decoration: underline;
+    text-transform: bold;
+}
+
+#sidebar.open {
+    right: 0;
+}
 
     </style>
 </head>
 
 <body>
+  
            <div id="foglayer_01" class="fog">
   <div class="image01"></div>
   <div class="image02"></div>
@@ -261,39 +328,148 @@ background-position:center;
 animation: yourAnimation 2s ease 2s 1 normal forwards;
 pointer-events: none;}
 @keyframes yourAnimation { 0.0%{ opacity: 1;} 75%{ opacity: 1; } 100%{ opacity: 0;} } 
+
+.dropdown {
+    position: relative;
+    margin-top: 175px;
+}
+
+.dropbtn {
+    background-color: #850404;
+    color: white;
+    padding: 15px 25px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    transition: background-color 0.3s;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #3a0808;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #200202;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    text-decoration: underline;
+}
+
+.dropdown-content.show {
+    display: block;
+}
+
+
 </style>
 
     <h1>Select a Movie!</h1>
-
+    
+ <a href="homepage.html">
+  <img src="logo.png" alt="CineVerse Logo" style="position: absolute; top: 20px; left: 20px; width: 150px; z-index: 5;"></a>
     <div class="movie-container">
-        <div class="movie" data-desc="Description of Movie 1"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ45xEGCwLnPgMbVMRnfvY_C3BNhpQKU9M8Twvz9S4EJYioJdNbZ8d3G4GCRYJCCHZDcXiJ&s=10" width="250" height="350"></div>
-        <div class="movie" data-desc="Description of Movie 2"><img src="https://resizing.flixster.com/K525zt73ek8gUyuGYiYa172O4sY=/fit-in/705x460/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p22546_p_v8_ap.jpg" width="250" height="350"></div>
-        <div class="movie" data-desc="Description of Movie 3"><img src="https://image.tmdb.org/t/p/original/oOwPCD4JwjptKlkXe7JB7Hq3kbT.jpg" width="250" height="350"> </div>
-        <div class="movie" data-desc="Description of Movie 4"><img src="https://m.media-amazon.com/images/M/MV5BNzk0Y2RlZjItZDUzYi00Y2JhLTk5MzMtNjgzYWFmZmUxN2FmXkEyXkFqcGc@._V1_.jpg" width="250"height="350"></div>
-        <div class="movie" data-desc="Description of Movie 5"><img src="https://m.media-amazon.com/images/M/MV5BNjgwYTI0YjctMWYzNS00MmI1LWI5YTctNmE1YjBkNDFlNWMxXkEyXkFqcGc@._V1_.jpg"width="250"height="350"></div>
+        <div class="movie" data-desc="As Above, So Below (R) | Archaeologist Scarlett Marlowe (Perdita Weeks) has devoted her whole life to finding one of history's greatest treasures: Flamel's Philosopher's Stone. According to legend, the artifact can grant eternal life and turn any metal into gold. When she learns that the stone is hidden underground in the Catacombs of Paris, she assembles a crew to guide and document her historic mission. As they begin their descent, the team-members have no way of knowing that they are entering their own personal hell.| Perdita Weeks, Ben Feldman, Edwin Hodge | 6.3/10 on IMDb, 29% on Rotten Tomatoes"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ45xEGCwLnPgMbVMRnfvY_C3BNhpQKU9M8Twvz9S4EJYioJdNbZ8d3G4GCRYJCCHZDcXiJ&s=10" width="250" height="350"></div>
+        <div class="movie" data-desc="The Blair Witch Project (R) | Found video footage tells the tale of three film students (Heather Donahue, Joshua Leonard, Michael C. Williams) who've traveled to a small town to collect documentary footage about the Blair Witch, a legendary local murderer. Over the course of several days, the students interview townspeople and gather clues to support the tale's veracity. But the project takes a frightening turn when the students lose their way in the woods and begin hearing horrific noises.|Heather Donahue, Michael Williams, Joshua Leonard | 6.5/10 on IMDb, 86% on Rotten Tomatoes"><img src="https://resizing.flixster.com/K525zt73ek8gUyuGYiYa172O4sY=/fit-in/705x460/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p22546_p_v8_ap.jpg" width="250" height="350"></div>
+        <div class="movie" data-desc="Jacob's Ladder (R) | After returning home from the Vietnam War, veteran Jacob Singer (Tim Robbins) struggles to maintain his sanity. Plagued by hallucinations and flashbacks, Singer rapidly falls apart as the world and people around him morph and twist into disturbing images. His girlfriend, Jezzie (Elizabeth Peña), and ex-wife, Sarah (Patricia Kalember), try to help, but to little avail. Even Singer's chiropractor friend, Louis (Danny Aiello), fails to reach him as he descends into madness. | Tim Robbins, Elizabeth Peña, Danny Aiello | 7.4/10 on IMDb, 72% on Rotten Tomatoes"><img src="https://image.tmdb.org/t/p/original/oOwPCD4JwjptKlkXe7JB7Hq3kbT.jpg" width="250" height="350"> </div>
+        <div class="movie" data-desc="Pearl (R)| Trapped on an isolated farm, Pearl must tend to her ailing father under the watch of her mother. Lusting for the glamorous life she's seen in movies, Pearl's temptations and repressions collide. | Mia Goth, David Corenswet, Tandi Wright, Matthew Sunderland, Emma Jenkins-Purro | 7/10 on IMDb, 93% on Rotten Tomatoes"><img src="https://m.media-amazon.com/images/M/MV5BNzk0Y2RlZjItZDUzYi00Y2JhLTk5MzMtNjgzYWFmZmUxN2FmXkEyXkFqcGc@._V1_.jpg" width="250"height="350"></div>
+        <div class="movie" data-desc="23 Years Later (R) | It's been almost three decades since the rage virus escaped from a biological weapons laboratory. Still living in a ruthlessly enforced quarantine, some have found ways to exist amid the infected. One such group of survivors lives on a small island connected to the mainland by a single, heavily defended causeway. When one of them decides to venture into the dark heart of the mainland, he soon discovers a mutation that has spread to not only the infected, but other survivors as well. | Jodie Comer, Aaron Taylor-Johnson. Jack O'Connell, Alfie Williams, Ralph Fiennes | 6.6/10 on IMDb, 89% on Rotten Tomatoes"><img src="https://m.media-amazon.com/images/M/MV5BNjgwYTI0YjctMWYzNS00MmI1LWI5YTctNmE1YjBkNDFlNWMxXkEyXkFqcGc@._V1_.jpg"width="250"height="350"></div>
     </div>
 
+<div id="menuBtn">
+    ☰
+</div>
+<div id="sidebar">
+    <img src="logo.png" alt="CineVerse Logo" style="position: absolute; top: 20px; left: 20px; width: 150px; z-index: 5;">
+
+    <a href="sources.html" style="position: absolute; z-index: 5; margin-top: 40px;">
+        Sources!
+    </a>
+
+    <a href="aboutus.html" style="position: absolute; z-index: 5; margin-top: 100px;">
+        About Us!
+    </a>
+     <div class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Genre Shortcut :3</a>
+        <div class="dropdown-content">
+            <a href="action.html">Action</a>
+            <a href="horror.html">Horror</a>
+            <a href="romance.html">Romance</a>
+            <a href="comedy.html">Comedy</a>
+        </div>
+    </div>
+</div>
     <div class="description" id="descriptionBox"></div>
 
-    <script>
-        const movies = document.querySelectorAll(".movie");
-        const descBox = document.getElementById("descriptionBox");
+       <script>
+       const movies = document.querySelectorAll(".movie");
+const descBox = document.getElementById("descriptionBox");
 
-        movies.forEach(movie => {
-            movie.addEventListener("mouseover", () => {
-                descBox.style.display = "block";
-                descBox.textContent = movie.getAttribute("data-desc");
-            });
+movies.forEach(movie => {
+    movie.addEventListener("mouseover", () => {
+        const movieDetails = movie.getAttribute("data-desc").split("|");
 
-            movie.addEventListener("mouseout", () => {
-                descBox.style.display = "none";
-            });
+        const title = movieDetails[0];
+        const synopsis = movieDetails[1];
+        const cast = movieDetails[2];
+        const rating = movieDetails[3];
 
-            movie.addEventListener("click", () => {
-                alert(movie.textContent + "   Must like this movie huh? :D");
-            });
-        });
+        descBox.innerHTML = `
+            <h3>${title}</h3>
+            <p><strong>Synopsis:</strong> ${synopsis}</p>
+            <p><strong>Cast:</strong> ${cast}</p>
+            <p><strong>Rating:</strong> ${rating}</p>
+        `;
+
+        descBox.style.display = "block";
+    });
+
+    movie.addEventListener("mouseout", () => {
+        descBox.style.display = "none";
+    });
+});
+
     </script>
+    <script>
+  const menuBtn = document.getElementById("menuBtn");
+  const sidebar = document.getElementById("sidebar");
 
+  menuBtn.addEventListener("click", () => {
+    sidebar.classList.toggle("open");
+  });
+</script>
+
+
+</body>
+<script>
+  const dropdown = document.querySelectorAll(".dropdown");
+
+  dropdown.forEach(item => {
+    const dropdownBtn = item.querySelector(".dropbtn");
+    const dropdownContent = item.querySelector(".dropdown-content");
+
+    dropdownBtn.addEventListener("click", () => {
+      dropdownContent.classList.toggle("show");
+    });
+  });
+</script>
+    <footer>© 2025 Cineverse. All rights reserved.</footer>
 </body>
 </html>
