--- a/horror.html
+++ b/horror.html
@@ -383,7 +383,7 @@ pointer-events: none;}
 
     <h1>Select a Movie!</h1>
     
- <a href="homepage.html">
+ <a href="index.html">
   <img src="logo.png" alt="CineVerse Logo" style="position: absolute; top: 20px; left: 20px; width: 150px; z-index: 5;"></a>
     <div class="movie-container">
         <div class="movie" data-desc="As Above, So Below (R) | Archaeologist Scarlett Marlowe (Perdita Weeks) has devoted her whole life to finding one of history's greatest treasures: Flamel's Philosopher's Stone. According to legend, the artifact can grant eternal life and turn any metal into gold. When she learns that the stone is hidden underground in the Catacombs of Paris, she assembles a crew to guide and document her historic mission. As they begin their descent, the team-members have no way of knowing that they are entering their own personal hell.| Perdita Weeks, Ben Feldman, Edwin Hodge | 6.3/10 on IMDb, 29% on Rotten Tomatoes"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ45xEGCwLnPgMbVMRnfvY_C3BNhpQKU9M8Twvz9S4EJYioJdNbZ8d3G4GCRYJCCHZDcXiJ&s=10" width="250" height="350"></div>
