--- a/romance.html
+++ b/romance.html
@@ -189,7 +189,7 @@
     </div>
 
     <div class="description" id="descriptionBox"></div>
-<a href="homepage.html">
+<a href="index.html">
   <img src="logo.png" alt="CineVerse Logo" style="position: absolute; top: 20px; left: 20px; width: 150px; z-index: 5;"></a>
 
 <div id="menuBtn">
