--- a/aboutus.html
+++ b/aboutus.html
@@ -123,7 +123,7 @@
         ☰
     </div>
     <div id="sidebar">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="sources.html">Sources</a>
         <a href="aboutus.html">About Us</a>
     </div>
