--- a/sources.html
+++ b/sources.html
@@ -193,7 +193,7 @@
         </ul>
     </main>
 
-    <a href="homepage.html">
+    <a href="index.html">
   <img src="logo.png" alt="CineVerse Logo" style="position: absolute; top: 20px; left: 20px; width: 150px; z-index: 5;"></a>
   
 
